--- a/essais.ipynb
+++ b/essais.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Shapley value computation\n",
+    "\n",
+    "We consider a monte carlo (or quasi-monte carlo) estimation technique before jumping to the discrete uniforme shapley value as proposed by the article.\n",
+    "\n",
+    "We imagine a scenario where k players each have some data and need to pool it to collaborate on tasks :\n",
+    "\n",
+    "1 - MNIST digit classification with a twist : some of the data is noisy and not all players have thus the same quality or quantity of data.\n",
+    "\n",
+    "2 - An XGBoost regressor : the data is squeaky clean and well adjusted for each. The goal is to compare the featue importances with those already implemented in XGB\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
