--- a/essais.ipynb
+++ b/essais.ipynb
@@ -421,15 +421,15 @@
     "            subset = df[(df['degradation_type'] == degradation_type) &\n",
     "                       (df['degradation_level'] == level) &\n",
     "                       (df['I'] == I)]\n",
-    "            # Test t pour comparer le biais absolu\n",
-    "            t_statistic_abs, p_value_abs = stats.ttest_ind(subset['Absolute Bias'][subset['Degraded'] == True],\n",
-    "                                                         subset['Absolute Bias'][subset['Degraded'] == False])\n",
-    "            # Test t pour comparer le biais relatif\n",
-    "            t_statistic_rel, p_value_rel = stats.ttest_ind(subset['Relative Bias'][subset['Degraded'] == True],\n",
-    "                                                         subset['Relative Bias'][subset['Degraded'] == False])\n",
-    "            print(f\"Comparaison des biais pour {degradation_type}, niveau {level}, I={I}:\")\n",
-    "            print(f\"  Test t (biais absolu): Statistique t={t_statistic_abs:.3f}, Valeur p={p_value_abs:.3f}\")\n",
-    "            print(f\"  Test t (biais relatif): Statistique t={t_statistic_rel:.3f}, Valeur p={p_value_rel:.3f}\")"
+    "            # Calculer les moyennes de DU-Shapley et True Shapley pour le sous-ensemble\n",
+    "            mean_du_shapley = subset['DU-Shapley'].mean()\n",
+    "            mean_true_shapley = subset['True Shapley'].mean()\n",
+    "            t_statistic, p_value = stats.ttest_1samp(subset['DU-Shapley'] - subset['True Shapley'], 0)\n",
+    "            print(f"Test t pour {degradation_type}, niveau {level}, I={I}:")\n",
+    "            print(f"  Moyenne DU-Shapley: {mean_du_shapley:.3f}")\n",
+    "            print(f"  Moyenne True Shapley: {mean_true_shapley:.3f}")\n",
+    "            print(f"  Statistique t: {t_statistic:.3f}")\n",
+    "            print(f"  Valeur p: {p_value:.3f}")"
    ]
   }
  ],
