--- a/essais.ipynb
+++ b/essais.ipynb
@@ -425,11 +425,11 @@
     "            mean_du_shapley = subset['DU-Shapley'].mean()\n",
     "            mean_true_shapley = subset['True Shapley'].mean()\n",
     "            t_statistic, p_value = stats.ttest_1samp(subset['DU-Shapley'] - subset['True Shapley'], 0)\n",
-    "            print(f"Test t pour {degradation_type}, niveau {level}, I={I}:")\n",
-    "            print(f"  Moyenne DU-Shapley: {mean_du_shapley:.3f}")\n",
-    "            print(f"  Moyenne True Shapley: {mean_true_shapley:.3f}")\n",
-    "            print(f"  Statistique t: {t_statistic:.3f}")\n",
-    "            print(f"  Valeur p: {p_value:.3f}")"
+    "            print(f\"Test t pour {degradation_type}, niveau {level}, I={I}:\")\n",
+    "            print(f\"  Moyenne DU-Shapley: {mean_du_shapley:.3f}\")\n",
+    "            print(f\"  Moyenne True Shapley: {mean_true_shapley:.3f}\")\n",
+    "            print(f\"  Statistique t: {t_statistic:.3f}\")\n",
+    "            print(f\"  Valeur p: {p_value:.3f}\")"
    ]
   }
  ],
